# oi-chatbot

./: .gitignore  README.md  config.yml  pyproject.toml
oi_chatbot/: config.py  main.py  utils.py
tests/oi_chatbot/: test_config.py  test_utils.py
